--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Wufasta</h1>
+<p></p>
+<IMG SRC="https://github.com/LordNolan/lordnolan.github.io/blob/master/Wufasta2.png" ALT="Logo">
 </body>
 </html>
